--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas": "^2.11.2",
     "debounce": "^1.2.1",
     "image-js": "^0.35.4",
+    "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
     "raw-loader": "^4.0.2",
