implement user follow/unfollow functionality on posts and profiles

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ NEXT_PUBLIC_COLLECTION_ID_PROFILE='65337c18bc43fca569c3'
 NEXT_PUBLIC_COLLECTION_ID_POST='65337ed8b469ff3ef69c'
 NEXT_PUBLIC_COLLECTION_ID_LIKE='65337dead5c7ce221e15'
 NEXT_PUBLIC_COLLECTION_ID_COMMENT='65337fc5e74761a44f2b'
+NEXT_PUBLIC_COLLECTION_ID_FOLLOW='7c3e91b0a6f4d2e8b59a'
 
 NEXT_PUBLIC_BUCKET_NAME="tiktok-clone"
 NEXT_PUBLIC_BUCKET_ID='653380f017ce685be4b3'
